Fix styling and other bugs.

--- a/new-space-systems/src/components/joinBtn/joinBtn.sass
+++ b/new-space-systems/src/components/joinBtn/joinBtn.sass
@@ -5,7 +5,7 @@ button.joinBtn
     flex-direction: row
     justify-content: center
     align-items: center
-    padding: 11.5px 60px
+    padding: 12.5px 36.5px 11.5px
     width: 190px
     height: 45px
     background: #FFD232
@@ -14,5 +14,12 @@ button.joinBtn
 
     +smMaxBreakPoint
         width: 135px
-    &:hover
-        background-color: $light-yellow
+    div
+        font-family: 'Avenir'
+        font-style: normal
+        font-weight: 500
+        font-size: 16px
+        line-height: 22px
+        text-align: center
+        letter-spacing: -0.011em
+        color: #883900
