--- a/new-space-systems/src/components/topMenu/topMenu.sass
+++ b/new-space-systems/src/components/topMenu/topMenu.sass
@@ -51,7 +51,6 @@ div.topMenu
                     letter-spacing: -0.022em
         div.buttons
             position: absolute
-            top: 7px
             right: 30px
             display: flex
             +smMaxBreakPoint
@@ -60,5 +59,13 @@ div.topMenu
                     display: none
             button
                 margin-left: 18px
+                div
+                    font-family: 'Avenir'
+                    font-style: normal
+                    font-weight: 500
+                    font-size: 16px
+                    line-height: 22px
+                    text-align: center
+                    letter-spacing: -0.011em
     &.disabled
         top: -60px
