--- a/new-space-systems/src/components/ContactBtn/contactBtn.sass
+++ b/new-space-systems/src/components/ContactBtn/contactBtn.sass
@@ -4,9 +4,7 @@
   flex-direction: row
   justify-content: center
   align-items: center
-  padding: 11.5px 36.5px
-  gap: 10px
-  width: 150px
+  padding: 12.5px 36px 11.5px
   height: 45px
   border: 1px solid #3A3A3A
   border-radius: 50px
