--- a/new-space-systems/src/components/joinBtn/joinBtn.css
+++ b/new-space-systems/src/components/joinBtn/joinBtn.css
@@ -3,7 +3,7 @@ button.joinBtn {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 11.5px 60px;
+  padding: 12.5px 36.5px 11.5px;
   width: 190px;
   height: 45px;
   background: #FFD232;
@@ -15,6 +15,13 @@ button.joinBtn {
     width: 135px;
   }
 }
-button.joinBtn:hover {
-  background-color: #FFF6C4;
+button.joinBtn div {
+  font-family: "Avenir";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  letter-spacing: -0.011em;
+  color: #883900;
 }/*# sourceMappingURL=joinBtn.css.map */
