--- a/new-space-systems/src/components/productCarousel/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
+++ b/new-space-systems/src/components/productCarousel/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
@@ -77,7 +77,7 @@
             width: 25%
 
 .BrainhubCarousel__container
-    width: 100%
+    // width: 100%
     height: 588px
     +smMaxBreakPoint
     height: 606px
@@ -100,25 +100,25 @@
         right: 32px
         left: auto
     .BrainhubCarousel__trackContainer
-        width: 100%
+        // width: 100%
         height: 100%
         overflow: hidden
         .BrainhubCarousel__track
-            display: flex
-            flex-gap: 24px
+            // display: flex
+            // flex-gap: 24px
         .BrainhubCarouselItem
-            width: 510px
+            // width: 510px
             height: 586px
             border: 1px solid #BBBBBB
             border-radius: 10px
             background-color: #fff
-            margin-right: 20px
-            display: block
+            // margin-right: 20px
+            // display: block
             .category
                 height: 586px
             .picture-container
                 border-radius: 10px 10px 0 0
-                width: 510px
+                // width: 510px
                 height: 400px
                 overflow: hidden
             img
