--- a/new-space-systems/src/components/recognisedBy/recognisedBy.sass
+++ b/new-space-systems/src/components/recognisedBy/recognisedBy.sass
@@ -30,16 +30,14 @@
       flex-grow: 1
       height: 32px
       padding: 24px
-      position: relative
+      display: flex
+      justify-content: center
+      align-items: center
       +smMaxBreakPoint
         width: 50%
         flex-grow: unset
         box-sizing: border-box
         margin: 28px 0
       img
-        position: absolute
-        top: 50%
-        left: 50%
-        transform: translate(-50%,-50%)
         max-width: 100%
         height: auto
