Styling and bug fixes.

--- a/landing-page/src/components/footer/footer.css
+++ b/landing-page/src/components/footer/footer.css
@@ -1,1 +1,5 @@
-div.footer{height:107px;line-height:107px;font-size:15px}/*# sourceMappingURL=footer.css.map */
+div.footer {
+  height: 107px;
+  line-height: 107px;
+  font-size: 15px;
+}/*# sourceMappingURL=footer.css.map */
