--- a/landing-page/src/components/joinBtn/joinBtn.css
+++ b/landing-page/src/components/joinBtn/joinBtn.css
@@ -1,1 +1,16 @@
-button.joinBtn{margin:7px 30px;background-color:#ffd232;color:#883900;width:200px;height:45px;border:none;border-radius:22.5px;font-size:16px;letter-spacing:-0.011em;font-weight:500;line-height:45px}button.joinBtn:hover{background-color:#fff6c4}/*# sourceMappingURL=joinBtn.css.map */
+button.joinBtn {
+  margin: 7px 30px;
+  background-color: #FFD232;
+  color: #883900;
+  width: 200px;
+  height: 45px;
+  border: none;
+  border-radius: 22.5px;
+  font-size: 16px;
+  letter-spacing: -0.011em;
+  font-weight: 500;
+  line-height: 45px;
+}
+button.joinBtn:hover {
+  background-color: #FFF6C4;
+}/*# sourceMappingURL=joinBtn.css.map */
