--- a/landing-page/src/components/App/app.css
+++ b/landing-page/src/components/App/app.css
@@ -1,1 +1,8 @@
-div.app{position:relative;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;background-color:#fbfbfb;color:#3a3a3a;overflow:hidden}/*# sourceMappingURL=app.css.map */
+div.app {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-color: #FBFBFB;
+  color: #3A3A3A;
+  overflow: hidden;
+}/*# sourceMappingURL=app.css.map */
