--- a/landing-page/src/components/productCategories copy/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
+++ b/landing-page/src/components/productCategories copy/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
@@ -17,8 +17,7 @@
             transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
             .category
                 +container(295px, 0, $blue, 5px)
-                &:hover
-                    cursor: pointer
+                cursor: pointer
                 .picture-container
                     height: 280px
                     overflow: hidden
@@ -49,7 +48,7 @@
                 left: auto
                 right: 28px
             &.disabled
-                display: .4
+                opacity: .4
                 cursor: auto
     .slider-container
         position: relative
