--- a/new-space-systems/src/components/productCarousel/productCarousel.css
+++ b/new-space-systems/src/components/productCarousel/productCarousel.css
@@ -119,61 +119,29 @@
   width: 25%;
 }
 
-.BrainhubCarousel__container {
-  height: 588px;
-  height: 606px;
-}
-.BrainhubCarousel__container .BrainhubCarousel {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-.BrainhubCarousel__container .BrainhubCarousel__arrows {
-  position: absolute;
-  z-index: 2;
-  top: 50%;
-  background-color: #3A3A3A;
-  border-radius: 50%;
-}
-.BrainhubCarousel__container .BrainhubCarousel__arrows:hover:enabled {
-  background-color: #3A3A3A;
-}
-.BrainhubCarousel__container .BrainhubCarousel__arrowLeft {
-  left: 32px;
-  right: auto;
-}
-.BrainhubCarousel__container .BrainhubCarousel__arrowRight {
-  right: 32px;
-  left: auto;
-}
-.BrainhubCarousel__container .BrainhubCarousel__trackContainer {
-  height: 100%;
-  overflow: hidden;
-}
-.BrainhubCarousel__container .BrainhubCarousel__trackContainer .BrainhubCarouselItem {
+.category {
   height: 586px;
+  width: 510px;
   border: 1px solid #BBBBBB;
   border-radius: 10px;
   background-color: #fff;
+  margin-right: 20px;
 }
-.BrainhubCarousel__container .BrainhubCarousel__trackContainer .BrainhubCarouselItem .category {
-  height: 586px;
-}
-.BrainhubCarousel__container .BrainhubCarousel__trackContainer .BrainhubCarouselItem .picture-container {
+.category .picture-container {
   border-radius: 10px 10px 0 0;
   height: 400px;
   overflow: hidden;
 }
-.BrainhubCarousel__container .BrainhubCarousel__trackContainer .BrainhubCarouselItem img {
+.category .picture-container img {
   width: 100%;
   height: 100%;
 }
-.BrainhubCarousel__container .BrainhubCarousel__trackContainer .BrainhubCarouselItem .bottom-section {
+.category .bottom-section {
   padding: 24px 28px;
   text-align: left;
   border-radius: 0 0 10px 10px;
 }
-.BrainhubCarousel__container .BrainhubCarousel__trackContainer .BrainhubCarouselItem .title {
+.category .bottom-section .title {
   margin-bottom: 10px;
   font-family: "Avenir";
   font-style: normal;
@@ -182,7 +150,7 @@
   line-height: 49px;
   letter-spacing: -0.011em;
 }
-.BrainhubCarousel__container .BrainhubCarousel__trackContainer .BrainhubCarouselItem .description {
+.category .bottom-section .title .description {
   font-family: "Avenir";
   font-style: normal;
   font-weight: 500;
