Finish the bug fixes.

--- a/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.sass
+++ b/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.sass
@@ -21,6 +21,7 @@
       height: auto
 
   .text-section-container
+    box-sizing: border-box
     width: 50%
     height: 100%
     padding: 69px 0 50px 112px
@@ -30,6 +31,7 @@
       padding: 0 25px 60px 25px
     .text-section
       width: 375px
+      padding-bottom: 50px
       +smMaxBreakPoint
         width: 325px
       h2
@@ -40,6 +42,7 @@
         font-size: 36px
         line-height: 49px
         color: $black
+        margin-top: 0
         +smMaxBreakPoint
           font-size: 30px
           line-height: 41px
@@ -102,7 +105,7 @@
         padding-top: 16px
         width: 376px
         height: 35px
-        margin-top: 61.5px
+        margin-top: 45px
         border: 1px solid $black
         border-radius: 80px
         text-decoration: none
