--- a/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.css
+++ b/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.css
@@ -27,6 +27,7 @@
   height: auto;
 }
 .lets-get-in-touch .text-section-container {
+  box-sizing: border-box;
   width: 50%;
   height: 100%;
   padding: 69px 0 50px 112px;
@@ -40,6 +41,7 @@
 }
 .lets-get-in-touch .text-section-container .text-section {
   width: 375px;
+  padding-bottom: 50px;
 }
 @media (max-width: 420px) {
   .lets-get-in-touch .text-section-container .text-section {
@@ -54,6 +56,7 @@
   font-size: 36px;
   line-height: 49px;
   color: #3A3A3A;
+  margin-top: 0;
 }
 @media (max-width: 420px) {
   .lets-get-in-touch .text-section-container .text-section h2 {
@@ -140,7 +143,7 @@
   padding-top: 16px;
   width: 376px;
   height: 35px;
-  margin-top: 61.5px;
+  margin-top: 45px;
   border: 1px solid #3A3A3A;
   border-radius: 80px;
   text-decoration: none;
