--- a/new-space-systems/src/components/productCarousel/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
+++ b/new-space-systems/src/components/productCarousel/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
@@ -1,97 +1,24 @@
-.categories-carousel-container
-    +flex(column)
-    gap: 30px
-    width: 100%
-    .categories-carousel
-        position: relative
-        height: 400px
-        width: 100%
-        overflow: hidden
-        .slides-list
-            position: absolute
-            top: 0
-            left: 0
-            +flex
-            gap: 20px
-            padding: 0 100px
-            transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms
-            .category
-                +container(295px, 0, $blue, 5px)
-                cursor: pointer
-                .picture-container
-                    height: 280px
-                    overflow: hidden
-                    .picture
-                        +bg-image(280px, 295px, '../../assets/category.webp', cover)
-                .name
-                    height: 118px
-                    font-size: 30px
-                    line-height: 118px
-                    color: $light-white
-                    -webkit-touch-callout: none
-                    -webkit-user-select: none
-                    -khtml-user-select: none
-                    -moz-user-select: none
-                    -ms-user-select: none
-                    user-select: none
-        .arrow
-            +center
-            +bg-image(35px, 35px, '../../assets/Arrows-black.svg')
-            z-index: 2
-            transform: translateX(0)
-            &:hover
-                cursor: pointer
-            &.left
-                left: 28px
-                transform: rotate(180deg)
-            &.right
-                left: auto
-                right: 28px
-            &.disabled
-                opacity: .4
-                cursor: auto
-    .slider-container
-        position: relative
-        +flex
-        height: 8px
-        width: 400px
-        background-color: $light-white
-        border-radius: 10px
-        overflow: hidden
-        cursor: pointer
-        .slider
-            position: absolute
-            top: 0
-            left: 0
-            width: 100px
-            height: 8px
-            background-color: $black
-            border-radius: 10px
-            transition: .3s
-        .slider-button
-            margin: 0
-            padding: 0
-            border: none
-            background-color: transparent
-            height: 100%
-            width: 25%
-
+button
+    &:disabled
+        opacity: 0
 .category
     height: 586px
     width: 510px
-    border: 1px solid #BBBBBB
-    border-radius: 10px
-    background-color: #fff
-    margin-right: 20px
+    .container
+        height: 584px
+        border: 1px solid #BBBBBB
+        border-radius: 10px
+        background: #F3F2EE
+        margin-right: 20px
     .picture-container
         border-radius: 10px 10px 0 0
-                    // width: 510px
         height: 400px
         overflow: hidden
         img
             width: 100%
             height: 100%
     .bottom-section
+        height: 120px
         padding: 24px 28px
         text-align: left
         border-radius: 0 0 10px 10px
@@ -102,12 +29,13 @@
             font-weight: 900
             font-size: 36px
             line-height: 49px
-            letter-spacing: -0.011em
-            .description
-                font-family: 'Avenir'
-                font-style: normal
-                font-weight: 500
-                font-size: 20px
-                line-height: 27px
-                letter-spacing: -0.022em
-                color: $black
+            letter-spacing: -0.026em
+
+        .description
+            font-family: 'Avenir'
+            font-style: normal
+            font-weight: 500
+            font-size: 20px
+            line-height: 27px
+            letter-spacing: -0.022em
+            color: $black
