--- a/new-space-systems/src/components/productCarousel/productCarousel.css
+++ b/new-space-systems/src/components/productCarousel/productCarousel.css
@@ -1,130 +1,16 @@
-.categories-carousel-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-  width: 100%;
-}
-.categories-carousel-container .categories-carousel {
-  position: relative;
-  height: 400px;
-  width: 100%;
-  overflow: hidden;
-}
-.categories-carousel-container .categories-carousel .slides-list {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  padding: 0 100px;
-  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-}
-.categories-carousel-container .categories-carousel .slides-list .category {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: stretch;
-  width: 295px;
-  padding: 0;
-  background-color: #847FFB;
-  border: 1px solid #BBBBBB;
-  border-radius: 5px;
-  cursor: pointer;
-}
-.categories-carousel-container .categories-carousel .slides-list .category .picture-container {
-  height: 280px;
-  overflow: hidden;
-}
-.categories-carousel-container .categories-carousel .slides-list .category .picture-container .picture {
-  height: 280px;
-  width: 295px;
-  background-image: url("../../assets/category.webp");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-.categories-carousel-container .categories-carousel .slides-list .category .name {
-  height: 118px;
-  font-size: 30px;
-  line-height: 118px;
-  color: #FEFEFE;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
-.categories-carousel-container .categories-carousel .arrow {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 35px;
-  width: 35px;
-  background-image: url("../../assets/Arrows-black.svg");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
-  z-index: 2;
-  transform: translateX(0);
-}
-.categories-carousel-container .categories-carousel .arrow:hover {
-  cursor: pointer;
-}
-.categories-carousel-container .categories-carousel .arrow.left {
-  left: 28px;
-  transform: rotate(180deg);
-}
-.categories-carousel-container .categories-carousel .arrow.right {
-  left: auto;
-  right: 28px;
-}
-.categories-carousel-container .categories-carousel .arrow.disabled {
-  opacity: 0.4;
-  cursor: auto;
-}
-.categories-carousel-container .slider-container {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  height: 8px;
-  width: 400px;
-  background-color: #FEFEFE;
-  border-radius: 10px;
-  overflow: hidden;
-  cursor: pointer;
-}
-.categories-carousel-container .slider-container .slider {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100px;
-  height: 8px;
-  background-color: #3A3A3A;
-  border-radius: 10px;
-  transition: 0.3s;
-}
-.categories-carousel-container .slider-container .slider-button {
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
-  height: 100%;
-  width: 25%;
+button:disabled {
+  opacity: 0;
 }
 
 .category {
   height: 586px;
   width: 510px;
+}
+.category .container {
+  height: 584px;
   border: 1px solid #BBBBBB;
   border-radius: 10px;
-  background-color: #fff;
+  background: #F3F2EE;
   margin-right: 20px;
 }
 .category .picture-container {
@@ -137,6 +23,7 @@
   height: 100%;
 }
 .category .bottom-section {
+  height: 120px;
   padding: 24px 28px;
   text-align: left;
   border-radius: 0 0 10px 10px;
@@ -148,9 +35,9 @@
   font-weight: 900;
   font-size: 36px;
   line-height: 49px;
-  letter-spacing: -0.011em;
+  letter-spacing: -0.026em;
 }
-.category .bottom-section .title .description {
+.category .bottom-section .description {
   font-family: "Avenir";
   font-style: normal;
   font-weight: 500;
@@ -545,22 +432,29 @@
   margin: 0 auto;
   border-radius: 10px;
 }
+.categories-carousel-container .carousel-root .slider .category .container {
+  height: 602px;
+  border: none;
+  border-radius: 10px;
+  margin-right: 0;
+}
 .categories-carousel-container .carousel-root .slider .category .picture-container {
-  height: 405px;
+  height: 365px;
   overflow: hidden;
   position: relative;
   border-radius: 10px 10px 0 0;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 .categories-carousel-container .carousel-root .slider .category .picture-container img {
-  height: 100%;
   width: auto;
-  top: 50%;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%);
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .categories-carousel-container .carousel-root .slider .category .bottom-section {
-  height: 206px;
+  height: 238px;
   font-size: 30px;
   line-height: 118px;
   color: #FEFEFE;
@@ -647,10 +541,11 @@
 }
 
 .product-categories {
-  width: calc(100% - 200px);
+  box-sizing: border-box;
+  width: 100%;
   height: 996px;
   background-color: #F3F2EE;
-  padding: 60px 100px;
+  padding: 60px 0 60px 100px;
 }
 @media (max-width: 420px) {
   .product-categories {
