--- a/new-space-systems/src/components/productCarousel/productCarousel.sass
+++ b/new-space-systems/src/components/productCarousel/productCarousel.sass
@@ -3,10 +3,11 @@
 @import 'categoriesCarouselMobile/_categoriesCarouselMobile'
 
 .product-categories
-  width: calc(100% - 200px)
+  box-sizing: border-box
+  width: 100%
   height: 996px
   background-color: #F3F2EE
-  padding: 60px 100px
+  padding: 60px 0 60px 100px
   +smMaxBreakPoint
     box-sizing: border-box
     padding: 60px 25px
