--- a/new-space-systems/src/components/testimonials/testimonials.css
+++ b/new-space-systems/src/components/testimonials/testimonials.css
@@ -383,22 +383,29 @@
   margin: 0 auto;
   border-radius: 10px;
 }
+.categories-carousel-container .carousel-root .slider .category .container {
+  height: 602px;
+  border: none;
+  border-radius: 10px;
+  margin-right: 0;
+}
 .categories-carousel-container .carousel-root .slider .category .picture-container {
-  height: 405px;
+  height: 365px;
   overflow: hidden;
   position: relative;
   border-radius: 10px 10px 0 0;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
 .categories-carousel-container .carousel-root .slider .category .picture-container img {
-  height: 100%;
   width: auto;
-  top: 50%;
-  left: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%);
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .categories-carousel-container .carousel-root .slider .category .bottom-section {
-  height: 206px;
+  height: 238px;
   font-size: 30px;
   line-height: 118px;
   color: #FEFEFE;
@@ -488,6 +495,7 @@
   height: 920px;
   width: 100%;
   padding: 90px 0;
+  background-color: #fff;
 }
 @media (max-width: 420px) {
   .testimonials {
@@ -495,7 +503,7 @@
   }
 }
 .testimonials h2 {
-  margin-left: 100px;
+  margin: 0 100px 90px;
   font-family: "Avenir";
   font-style: normal;
   font-weight: 900;
@@ -513,91 +521,59 @@
     letter-spacing: -0.011em;
   }
 }
-.testimonials .BrainhubCarousel__container {
-  width: 100%;
-  height: 660px;
+.testimonials .category {
+  height: 682px;
+  width: 365px;
+  background-color: #fff;
 }
-.testimonials .BrainhubCarousel__container .BrainhubCarousel {
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__arrows {
-  position: absolute;
-  z-index: 2;
-  top: 50%;
-  background-color: #3A3A3A;
-  border-radius: 50%;
-}
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__arrowLeft {
-  left: 32px;
-  right: auto;
-}
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__arrowRight {
-  right: 32px;
-  left: auto;
-}
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer {
-  margin: 0 100px;
-  width: calc(100% - 200px);
-  height: 100%;
-  overflow: hidden;
+.testimonials .category .container {
+  height: 680px;
+  margin: 0 10px;
+  background-color: #fff;
 }
 @media (max-width: 420px) {
-  .testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer {
-    width: 100%;
+  .testimonials .category .container {
     margin: 0;
   }
 }
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track {
-  display: flex;
-  flex-gap: 24px;
-}
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem {
-  width: 510px;
-  height: 656.5px;
-  border: 1px solid #BBBBBB;
-  border-radius: 10px;
-  background-color: #fff;
-  margin-right: 20px;
-  display: block;
-}
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .category {
-  height: 656.5px;
-}
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .category .picture-container {
+.testimonials .category .picture-container {
   border-radius: 10px 10px 0 0;
   width: 100%;
-  height: 325px;
+  height: 340px;
   overflow: hidden;
   position: relative;
 }
 @media (max-width: 420px) {
-  .testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .category .picture-container {
+  .testimonials .category .picture-container {
     width: 100%;
     height: auto;
   }
 }
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .category .picture-container img {
+.testimonials .category .picture-container img {
   width: 100%;
-  height: auto;
+  height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .category .bottom-section {
+.testimonials .category .bottom-section {
   box-sizing: border-box;
   padding: 40px 20px 20px;
   text-align: left;
   border-radius: 0 0 10px 10px;
+  border: 1px solid #BBBBBB;
+  border-top-width: 1px;
+  border-right-width: 0;
+  border-bottom-width: 0;
+  border-left-width: 0;
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 332px;
 }
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .category .bottom-section .description {
+.testimonials .category .bottom-section .description {
   width: 100%;
   font-family: "Avenir";
   font-style: normal;
@@ -607,7 +583,7 @@
   letter-spacing: -0.022em;
   color: #3A3A3A;
 }
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .category .bottom-section .author {
+.testimonials .category .bottom-section .author {
   font-family: "Avenir";
   font-style: normal;
   font-weight: 500;
@@ -617,82 +593,7 @@
   text-decoration-line: underline;
   color: #3A3A3A;
 }
-.testimonials .BrainhubCarousel__container .BrainhubCarousel .BrainhubCarousel__trackContainer .BrainhubCarousel__track .BrainhubCarouselItem .category .bottom-section .ocupation {
-  font-family: "Avenir";
-  font-style: normal;
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 22px;
-  letter-spacing: -0.022em;
-  color: #3A3A3A;
-}
-.testimonials .categories-carousel-container {
-  height: auto;
-}
-.testimonials .categories-carousel-container .carousel-root {
-  height: auto;
-}
-.testimonials .categories-carousel-container .carousel-root .slider {
-  height: auto;
-}
-.testimonials .categories-carousel-container .carousel-root .slider .slide {
-  height: 698px;
-}
-.testimonials .categories-carousel-container .carousel-root .slider .slide .category {
-  margin: 24px;
-  width: calc(100% - 48px);
-  height: 672px;
-}
-.testimonials .categories-carousel-container .carousel-root .slider .slide .category .picture-container {
-  width: 100%;
-  height: 340px;
-  background-color: #fff;
-}
-.testimonials .categories-carousel-container .carousel-root .slider .slide .category .picture-container img {
-  width: 100%;
-  height: auto;
-}
-.testimonials .categories-carousel-container .carousel-root .slider .slide .category .bottom-section {
-  box-sizing: border-box;
-  padding: 40px 20px 20px;
-  text-align: left;
-  border-radius: 0 0 10px 10px;
-  height: 331px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-@media (max-width: 420px) {
-  .testimonials .categories-carousel-container .carousel-root .slider .slide .category .bottom-section {
-    width: auto;
-    height: 340px;
-  }
-}
-.testimonials .categories-carousel-container .carousel-root .slider .slide .category .bottom-section .description {
-  font-family: "Avenir";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 33px;
-  letter-spacing: -0.022em;
-  color: #3A3A3A;
-}
-@media (max-width: 420px) {
-  .testimonials .categories-carousel-container .carousel-root .slider .slide .category .bottom-section .description {
-    border-bottom: 60px;
-  }
-}
-.testimonials .categories-carousel-container .carousel-root .slider .slide .category .bottom-section .author {
-  font-family: "Avenir";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 22px;
-  letter-spacing: -0.022em;
-  text-decoration-line: underline;
-  color: #3A3A3A;
-}
-.testimonials .categories-carousel-container .carousel-root .slider .slide .category .bottom-section .ocupation {
+.testimonials .category .bottom-section .ocupation {
   font-family: "Avenir";
   font-style: normal;
   font-weight: 300;
