--- a/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.css
+++ b/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.css
@@ -36,7 +36,7 @@
   .lets-get-in-touch .text-section-container {
     width: 100%;
     box-sizing: border-box;
-    padding: 0 25px 60px 25px;
+    padding: 59px 25px 60px 25px;
   }
 }
 .lets-get-in-touch .text-section-container .text-section {
