--- a/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.sass
+++ b/new-space-systems/src/components/letsGetInTouch/LetsGetInTouch.sass
@@ -28,7 +28,7 @@
     +smMaxBreakPoint
       width: 100%
       box-sizing: border-box
-      padding: 0 25px 60px 25px
+      padding: 59px 25px 60px 25px
     .text-section
       width: 375px
       padding-bottom: 50px
