--- a/new-space-systems/src/components/productCarousel/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
+++ b/new-space-systems/src/components/productCarousel/categoriesCarouselDesktop/_categoriesCarouselDesktop.sass
@@ -39,3 +39,21 @@ button
             line-height: 27px
             letter-spacing: -0.022em
             color: $black
+.slider-root
+    height: 126px
+    padding: 60px
+    box-sizing: border-box
+    .slider-container
+        margin: 0 auto
+        width: 325px
+        height: 6px
+        background: #EBEBEB
+        border-radius: 10px
+        position: relative
+        cursor: pointer
+    .slider
+        position: absolute
+        width: 65px
+        height: 6px
+        background: #3A3A3A
+        border-radius: 40px
