Fix style issues.

--- a/new-space-systems/src/components/header/header.css
+++ b/new-space-systems/src/components/header/header.css
@@ -10,7 +10,7 @@ div.header {
 }
 @media (max-width: 420px) {
   div.header {
-    height: 98vh;
+    height: 945px;
     width: 100%;
     background-image: url("../../assets/mobile-header.webp");
     background-repeat: no-repeat;
