--- a/new-space-systems/src/components/header/header.sass
+++ b/new-space-systems/src/components/header/header.sass
@@ -5,7 +5,7 @@ div.header
     top: 0
     +bg-image(calc(98vh), 100%, '../../assets/Beauty-Sideboard-1.webp', cover)
     +smMaxBreakPoint
-        +bg-image(calc(98vh), 100%, '../../assets/mobile-header.webp',contain,top)
+        +bg-image(calc(945px), 100%, '../../assets/mobile-header.webp',contain,top)
     div.shadow
         position: absolute
         width: 100%
