--- a/new-space-systems/src/components/testimonials/testimonials.css
+++ b/new-space-systems/src/components/testimonials/testimonials.css
@@ -495,7 +495,7 @@
   height: 920px;
   width: 100%;
   padding: 90px 0;
-  background-color: #fff;
+  background-color: #ECEDFC;
 }
 @media (max-width: 420px) {
   .testimonials {
@@ -539,7 +539,7 @@
 .testimonials .category .picture-container {
   border-radius: 10px 10px 0 0;
   width: 100%;
-  height: 340px;
+  height: 293px;
   overflow: hidden;
   position: relative;
 }
@@ -551,7 +551,7 @@
 }
 .testimonials .category .picture-container img {
   width: 100%;
-  height: 100%;
+  height: auto;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -601,4 +601,16 @@
   line-height: 22px;
   letter-spacing: -0.022em;
   color: #3A3A3A;
+}
+
+#root > div > div.testimonials > div > div > div > div.slider-wrapper.axis-horizontal > ul > li > div {
+  height: 533px;
+}
+
+#root > div > div.testimonials > div > div > div > div.slider-wrapper.axis-horizontal > ul > li > div > div {
+  height: 531px;
+}
+
+#root > div > div.testimonials > div > div > div > div.slider-wrapper.axis-horizontal > ul > li > div > div > div.picture-container {
+  height: 293px;
 }/*# sourceMappingURL=testimonials.css.map */
