--- a/new-space-systems/src/components/testimonials/testimonials.sass
+++ b/new-space-systems/src/components/testimonials/testimonials.sass
@@ -4,7 +4,7 @@
   height: 920px
   width: 100%
   padding: 90px 0
-  background-color: #fff
+  background-color: #ECEDFC
   +smMaxBreakPoint
     padding-top: 0
   h2
@@ -36,7 +36,7 @@
     .picture-container
       border-radius: 10px 10px 0 0
       width: 100%
-      height: 340px
+      height: 293px
       overflow: hidden
       position: relative
 
@@ -45,7 +45,7 @@
         height: auto
       img
         width: 100%
-        height: auto%
+        height: auto
         position: absolute
         top: 50%
         left: 50%
@@ -91,3 +91,9 @@
         line-height: 22px
         letter-spacing: -0.022em
         color: $black
+#root > div > div.testimonials > div > div > div > div.slider-wrapper.axis-horizontal > ul > li > div
+  height: 533px
+#root > div > div.testimonials > div > div > div > div.slider-wrapper.axis-horizontal > ul > li > div > div
+  height: 531px
+#root > div > div.testimonials > div > div > div > div.slider-wrapper.axis-horizontal > ul > li > div > div > div.picture-container
+  height: 293px
