Fix styling of last components.

--- a/new-space-systems/src/components/testimonials/testimonials.sass
+++ b/new-space-systems/src/components/testimonials/testimonials.sass
@@ -97,3 +97,6 @@
   height: 531px
 #root > div > div.testimonials > div > div > div > div.slider-wrapper.axis-horizontal > ul > li > div > div > div.picture-container
   height: 293px
+#root > div > div.testimonials > div > div > div > div.slider-wrapper.axis-horizontal > ul > li.slide > div > div > div.picture-container > img
+  width: 100%
+  height: auto
