Fix styling of last components.

--- a/new-space-systems/src/components/testimonials/testimonials.css
+++ b/new-space-systems/src/components/testimonials/testimonials.css
@@ -407,7 +407,7 @@
 .testimonials .category {
   height: 682px;
   width: 365px;
-  background-color: #fff;
+  background-color: #ecedfc;
 }
 .testimonials .category .container {
   height: 680px;
