--- a/new-space-systems/src/components/testimonials/testimonials.sass
+++ b/new-space-systems/src/components/testimonials/testimonials.sass
@@ -26,7 +26,7 @@
   .category
     height: 682px
     width: 365px
-    background-color: #fff
+    background-color: #ecedfc
     .container
       height: 680px
       margin: 0 10px
